--- a/.gitignore
+++ b/.gitignore
@@ -1,67 +1,37 @@
-# ──────────────
-# Node / General
-# ──────────────
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-.DS_Store
-Thumbs.db
+# Dependencies
+node_modules
+.pnp
+.pnp.js
 
-# Logs
-logs/
-*.log
-*.log.*
+# Testing
+coverage
 
-# Builds / artefactos
-dist/
-build/
-coverage/
+# Next.js
 .next/
 out/
-.vercel/
-.cache/
-.tmp/
+build
 
-# ──────────────
-# Next.js (frontend)
-# ──────────────
-frontend/.next/
-frontend/out/
-frontend/.turbo/
-frontend/.swc/
+# Misc
+.DS_Store
+*.pem
 
-# ──────────────
-# TypeScript
-# ──────────────
-*.tsbuildinfo
+# Debug
+npm-debug.log*
+yarn-debug.log*
+ts-debug.log*
 
-# ──────────────
-# Env / credenciales
-# (dejamos los lockfiles, esos SÍ se deben versionar)
-# ──────────────
+# Local Env Files
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+*.env
+*.env.*
 
-frontend/.env
-backend/.env
+# Vercel
+.vercel
 
-# ──────────────
-# Prisma
-# (por si en algún momento usas SQLite local)
-# ──────────────
-**/prisma/dev.db
-**/prisma/dev.db-journal
-**/*.db-journal
-
-# ──────────────
-# Editor / SO
-# ──────────────
-.vscode/
-.idea/
-*.swp
-*.swo
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
